# sigdiscovPy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DOCKER.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: algorithm-porter.md  gpu-optimizer.md  r-validator.md  test-writer.md
.github/workflows/: docker.yml  lint.yml  test.yml
benchmarks/: benchmark_gpu_vs_cpu.py
sigdiscovpy/: __init__.py
sigdiscovpy/analysis/: __init__.py  celltype_pair.py  delta_i.py  genomewide.py  pairwise_moran.py  roc_pr.py
sigdiscovpy/core/: __init__.py  metrics.py  normalization.py  spatial_lag.py  weights.py
sigdiscovpy/gpu/: __init__.py  backend.py
sigdiscovpy/io/: __init__.py  export_parse10m.py  hdf5.py  loaders.py
sigdiscovpy/neighbors/: __init__.py  kdtree.py
sigdiscovpy/simulation/: __init__.py  runner.py
sigdiscovpy/simulation/analysis/: __init__.py  ind_computer.py
sigdiscovpy/simulation/config/: __init__.py  dataclasses.py  presets.py
sigdiscovpy/simulation/domain/: __init__.py  spatial.py
sigdiscovpy/simulation/expression/: __init__.py  stochastic.py  vst.py
sigdiscovpy/simulation/physics/: __init__.py  diffusion.py
sigdiscovpy/simulation/realdata/: __init__.py  de_filter.py  loaders.py  spatial_layout.py
sigdiscovpy/simulation/visualization/: __init__.py  plots.py
sigdiscovpy/stats/: __init__.py  fdr.py  permutation.py
tests/: __init__.py  test_cross_impl.py  test_cross_validation.py  test_equivalence.py  test_fdr.py  test_gpu.py  test_metrics.py  test_normalization.py  test_pairwise_moran.py  test_permutation.py  test_real_data_equivalence.py  test_realdata.py  test_simulation.py  test_visualization.py  test_viz_v4_direct.py  test_weights.py
validation/: VALIDATION_RESULTS.md  test_coad.py  test_cosmx.py  test_macrophage_caf_tgfb1.py  validate_against_r.py
